Add bin + version

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "name": "@becklyn/svg-min",
+    "version": "0.0.1",
     "dependencies": {
         "chalk": "^2.3.0",
         "glob": "^7.1.2",
@@ -10,5 +11,8 @@
         "svgdom": "^0.0.15",
         "svgo": "svg/svgo#999cfbd97c37e2b1de3b2ccc26f5498daf6e2fc8",
         "xml2js": "^0.4.19"
+    },
+    "bin": {
+        "svg-min": "index.js"
     }
 }
