--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
     },
     "bin": {
         "svg-min": "index.js"
+    },
+    "scripts": {
+        "test": "ava"
+    },
+    "devDependencies": {
+        "ava": "^0.23.0"
     }
 }
